@@ -6,3 +6,4 @@ No formatting, just plain text. CurseForge support for it is terrible.
 Change logging starts below:
 ----------
 - prevent inserting multiple unstackables into basins
+- fix basins collecting remainders from all items, not just those consumed (#870)
